--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'codenarc'
 
-version = '2.0.0-PROXY-SNAPSHOT'
+version = '2.0.0-PROXY'
 group = 'com.github.groovy-wslite'
 
 sourceCompatibility = 1.7
@@ -148,4 +148,20 @@ gradle.taskGraph.whenReady { graph ->
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.4'
+}
+
+publishing.publications {
+    mavenJava(MavenPublication) {
+        from components.java
+
+        artifact sourcesJar {
+            classifier "sources"
+        }
+        artifact javadocJar {
+            classifier "javadoc"
+        }
+        artifact groovydocJar {
+            classifier "groovydoc"
+        }
+    }
 }
