--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'codenarc'
 
-version = '2.0.0-PROXY'
+version = '2.0.1-PROXY-SNAPSHOT'
 group = 'com.github.groovy-wslite'
 
 sourceCompatibility = 1.7
